--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,11 +19,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Car App</title>
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      Debe habilitar JavaScript para poder correr esta aplicación.
     </noscript>
     <div id="root"></div>
     <!--
